Add list user query params
