# docs/swagger.json
@@ -909,6 +909,25 @@
                     "Service API"
                 ],
                 "summary": "List all Users",
+                "parameters": [
+                    {
+                        "enum": [
+                            "username",
+                            "first_name",
+                            "last_name"
+                        ],
+                        "type": "string",
+                        "description": "Field to search by (optional)",
+                        "name": "field",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Search text (optional)",
+                        "name": "q",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -1166,13 +1185,13 @@
                             "name"
                         ],
                         "type": "string",
-                        "description": "field to search by",
+                        "description": "Field to search by (optional)",
                         "name": "field",
                         "in": "query"
                     },
                     {
                         "type": "string",
-                        "description": "search text",
+                        "description": "Search text (optional)",
                         "name": "q",
                         "in": "query"
                     }
